# rusty_beginnings

./: Cargo.toml  LICENSE  README.md
src/: main.rs
