[package]
name = "exif_etl"
version = "0.1.0"
edition = "2021"

[dependencies]
csv   = "1.3"
rexif = "0.7.5"
rayon = "1.10"

# minimal Chrono build: keeps the clock, drops heavy tz data tables
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.dev]          # high‑performance release profile
opt-level        = 3       # full speed optimisation
lto              = "fat"   # link‑time optimisation across the whole crate graph
codegen-units    = 1       # single code‑gen unit ⇒ better optimisation, slower compile
